# MCFG_PARSER

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.ipynb_checkpoints/: README-checkpoint.md
Src/mcfg_parser/: grammar.py  parser.py  tree.py
Src/mcfg_parser/.ipynb_checkpoints/: __init__-checkpoint.py  grammar-checkpoint.py
tests/: Untitled.ipynb  test_grammar.py  test_parser.py  test_tree.py
tests/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test_grammar-checkpoint.py
